--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .el-notification.right {
+        @apply w-11/12 md:w-auto md:min-w-[330px];
+    }
+}
