--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 @layer utilities {
+    body {
+        @apply antialiased;
+    }
     .el-notification.right {
         @apply w-11/12 md:w-auto md:min-w-[330px];
     }
